# a11y-data-viz

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  pyproject.toml
examples/: palettes.ipynb
src/qsstyles/: __about__.py
src/qsstyles/styles/: qs-common.mplstyle  qs-dark.mplstyle  qs-light.mplstyle
src/qstyles/: __init__.py  palettes.py  styler.py  themes.py
tests/: __init__.py
